--- a/.github/workflows/.yml
+++ b/.github/workflows/.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Publish
       uses: netlify/actions/cli@master
       with:
-        args: deploy --dir=./dist 
+        args: deploy --dir=./dist && netlify deploy --prod --dir=./dist/
       env:
         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
